responsive del home y todas las paginas del perfil

--- a/plumeti/public/stylesheets/profile-password.css
+++ b/plumeti/public/stylesheets/profile-password.css
@@ -1,48 +1,12 @@
-.container #left ul li:nth-child(2) a{
-    color: #000;
-}
-
-.container #left ul li:nth-child(3) a{
-    color: #0077cc;
-}
-#right #password{
-    margin: auto;
-    width: 60%;
-    height: 70vh;
-    margin-top: 50px;
-    padding: 0 0 0 100px ;
-}
-#right #password{
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-}
-#right #password input{
-    width: 200px;
+#right .right input.contraseña{
     outline: none;
-    border: none;
-    background-color: transparent;
-    margin: 10px 0 20px 0;
-    border-bottom: 1px solid #707070;
-    padding: 5px;
-}
-#right #password label{
-    margin: 20px 0 0 0;
-}
-
-
-#right button{
-    padding: 5px 10px;
-    outline: none;
-    border: none;
-    background-color: #e9dfcf;
-    color: white;
-    font-size: 20px;
+    transition: .3s;
     border-radius: 5px;
-    position: absolute;
-    bottom: 0;
-    right: 200px;
-    margin: 50px;
-    cursor: pointer;
+    border: 1px solid #ccc;
+    border: none;
+}
+#right .right input.contraseña:focus{
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: #f7f7f7;
 }
