--- a/plumeti/views/home.ejs
+++ b/plumeti/views/home.ejs
@@ -11,108 +11,92 @@
     <script src="https://kit.fontawesome.com/eff8b9a252.js" crossorigin="anonymous"></script>
 
     <!--CSS-->
+    <link rel="stylesheet" href="/stylesheets/navbar.css">
     <link rel="stylesheet" href="/stylesheets/home.css">
+    <link rel="stylesheet" href="/stylesheets/footer.css">
 
-    <!--Javascript-->
-    <script src="/javascripts/parallax.js"></script>
     <title>Home</title>
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top w-100 m-0 shadow">
-        <div class="container">
-            <div class="navbar-brand">
-                <img src="/images/logo.svg" height="40px" alt="">
-            </div>
-
-            <i class="fas fa-bars navbar-toggler" data-target="#menu" data-toggle="collapse" type="button"></i>
-                
-            <div class="collapse navbar-collapse" id="menu">
-
-                <input class="form-control " type="text" placeholder="Search" aria-label="Search">
-
-
-                <ul class="navbar-nav ml-auto">
-                    <li class="navbar-item mx-1">
-                        <a href="/home" class="nav-link">Inicio</a>
-                    </li>
-                    <li class="navbar-item mx-1">
-                        <a href="/profile" class="nav-link">Perfil</a>
-                    </li>
-                    <li class="navbar-item mx-1">
-                        <a href="/products" class="nav-link">Productos</a>
-                    </li>
-                    <li class="navbar-item mx-1">
-                        <a href="/cart" class="nav-link"><i class="fas fa-shopping-cart"></i></a>
-                    </li>
-                </ul>                
-            </div>
-        </div>
-    </nav>
-
-    <div class="relleno"></div>
+    <%- include('partials/navbar.ejs') %>
 
     <div id="carousel">
         <img class="w-100" src="/images/slider3.jpeg" alt="">
-        <a href="" class="nav-link">
-            <i class="fas fa-chevron-left p-5"></i>
-        </a>
-        <a href="" class="nav-link">
-            <i class="fas fa-chevron-right p-5"></i>
-        </a>
+        
+        <div class="row d-flex align-items center justify-content-between">
+            <a href="" class="nav-link">
+                <i class="fas fa-chevron-left px-5"></i>
+            </a>
+            
+            <a href="" class="nav-link">
+                <i class="fas fa-chevron-right px-5"></i>
+            </a>
+        </div>
     </div>
+
+
 
     <main>
         <div class="container">
             
             <h2 class=" mt-5 pt-5">Productos Destacados</h2>
 
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+            <div class="row my-5">
+                <div class="producto col-lg-3 col-md-6 col-sm-12 mt-5 position-relative">
                     <img class="w-100" src="/images/slider1.jpg" alt="">
-                    <h3 class="text-center my-3">Nombre del producto</h3>
-                    <p class="text-center">$300</span>
+                    <h3 class="px-3 my-2 text-center">Nombre del producto</h3>
+                    <p class="text-center px-3">$300</p>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+
+
+                <div class="producto col-lg-3 col-md-6 col-sm-12 mt-5 position-relative">
                     <img class="w-100" src="/images/slider1.jpg" alt="">
-                    <h3 class="text-center my-3">Nombre del producto</h3>
-                    <p class="text-center">$300</span>
+                    <h3 class="px-3 my-2 text-center">Nombre del producto</h3>
+                    <p class="text-center px-3">$300</p>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+
+
+                <div class="producto col-lg-3 col-md-6 col-sm-12 mt-5 position-relative">
                     <img class="w-100" src="/images/slider1.jpg" alt="">
-                    <h3 class="text-center my-3">Nombre del producto</h3>
-                    <p class="text-center">$300</span>
+                    <h3 class="px-3 my-2 text-center">Nombre del producto</h3>
+                    <p class="text-center px-3">$300</p>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+
+
+                <div class="producto col-lg-3 col-md-6 col-sm-12 mt-5">
                     <img class="w-100" src="/images/slider1.jpg" alt="">
-                    <h3 class="text-center my-3">Nombre del producto</h3>
-                    <p class="text-center">$300</p>
+                    <h3 class="px-3 my-2 text-center">Nombre del producto</h3>
+                    <p class="text-center px-3">$300</p>
                 </div>
             </div>
 
 
             <h2 class=" mt-5 pt-5">Productos Nuevos</h2>
 
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+            <div class="row my-5">
+                <div class="producto col-lg-3 col-md-6 col-sm-12 mt-5 position-relative">
                     <img class="w-100" src="/images/slider1.jpg" alt="">
-                    <h3 class="text-center my-3">Nombre del producto</h3>
-                    <p class="text-center">$300</span>
+                    <h3 class="px-3 my-2 text-center">Nombre del producto</h3>
+                    <p class="text-center px-3">$300</p>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+                
+                <div class="producto col-lg-3 col-md-6 col-sm-12 mt-5 position-relative">
                     <img class="w-100" src="/images/slider1.jpg" alt="">
-                    <h3 class="text-center my-3">Nombre del producto</h3>
-                    <p class="text-center">$300</span>
+                    <h3 class="px-3 my-2 text-center">Nombre del producto</h3>
+                    <p class="text-center px-3">$300</p>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+                
+                <div class="producto col-lg-3 col-md-6 col-sm-12 mt-5 position-relative">
                     <img class="w-100" src="/images/slider1.jpg" alt="">
-                    <h3 class="text-center my-3">Nombre del producto</h3>
-                    <p class="text-center">$300</span>
+                    <h3 class="px-3 my-2 text-center">Nombre del producto</h3>
+                    <p class="text-center px-3">$300</p>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+
+                <div class="producto col-lg-3 col-md-6 col-sm-12 mt-5 position-relative">
                     <img class="w-100" src="/images/slider1.jpg" alt="">
-                    <h3 class="text-center my-3">Nombre del producto</h3>
-                    <p class="text-center">$300</p>
+                    <h3 class="px-3 my-2 text-center">Nombre del producto</h3>
+                    <p class="text-center px-3">$300</p>
                 </div>
             </div>
         </div>
@@ -128,31 +112,7 @@
         </article>
     </section>
 
-    <footer class="">
-        <div class="container">
-            
-            <div class="row d-flex justify-content-between">
-
-                <span class="py-5 col-lg-6 col-md-6 col-sm-12 text-center">© Plumeti 2020</span>
-
-
-                <span class="py-5 col-lg-6 col-md-6 col-sm-12 text-center">
-                    <a href="">
-                        <i class="ml-3 fab fa-facebook-f"></i>
-                    </a>
-                    <a href="">
-                        <i class="ml-3 fab fa-instagram"></i>
-                    </a>
-                    <a href="">
-                        <i class="ml-3 fab fa-whatsapp"></i>
-                    </a>
-                    <a href="">
-                        <i class="ml-3 fas fa-envelope"></i>
-                    </a>
-                </span>
-            </div>
-        </div>
-    </footer>
+    <%- include('partials/footer.ejs') %>
 
 
 
