--- a/plumeti/views/password.ejs
+++ b/plumeti/views/password.ejs
@@ -4,62 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="/stylesheets/navbar.css">
-    <link rel="stylesheet" href="/stylesheets/profile-personal-data.css">
-    <link rel="stylesheet" href="/stylesheets/profile-password.css">
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <!-- scripts -->
+    <!--Fontawesome-->
     <script src="https://kit.fontawesome.com/eff8b9a252.js" crossorigin="anonymous"></script>
-    <title>Perfil</title>
+
+    <!--CSS-->
+    <link rel="stylesheet" href="/stylesheets/navbar.css">
+    <link rel="stylesheet" href="/stylesheets/profile-left.css">
+    <link rel="stylesheet" href="/stylesheets/profile-password.css">
+    <link rel="stylesheet" href="/stylesheets/footer.css">
+
+    <title>Home</title>
 </head>
 <body>
 
-        <!-- Hoja de estilo para el nav navbar.css -->
-        <div class="relleno"></div>
-        <nav>
-            <div class="navContainer">
-                <a href="/home">
-                    <img id="logo" src="/images/logo.svg" alt="">
-                </a>
-                <input id="buscador" type="search" value="" placeholder="Buscar">
-    
-                <ul>
-                    <li><a href="/home">Inicio</a></li>
-                    <li><a href="/profile">Perfil</a></li>
-                    <li><a href="/products">Productos</a></li>
-                </ul>
-                <a href="/cart"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-        </nav>
+    <%- include('partials/navbar.ejs') %>
 
-        <div class="container">
-            <div class="left"></div>
-            <div id="left">
-                <div id="profile-image">
-                    <p>Carga tu foto de perfil</p>
+    <div class="container-fluid">
+        <div class="row">
+
+            <%- include('partials/profile-left.ejs') %>
+
+            <div class="col-lg-9 col-sm-12 p-5" id="right">
+                <div class="right">
+                    <div class="container">
+
+                        <h2 class="py-5">Cambia tu contraseña</h2>
+
+
+                        <div class="row">
+                            <div class="col-12 my-2 ">
+                                <input class="contraseña" type="password" placeholder="contraseña ">
+                            </div>
+                        </div>
+
+
+                        <div class="row">
+                            <div class="col-12 my-2 ">
+                                <input class="contraseña" type="password" placeholder="contraseña actual">
+                            </div>
+                        </div>
+
+
+                        <div class="row">
+                            <div class="col-12 my-2 ">
+                                <input class="contraseña" type="password" placeholder="contraseña nueva">
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="offset-7">
+                                <button class="btn btn-info my-5 ">Guardar</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
-                <ul>
-                    <li><a href="/profile/record">Historial de compras</a></li>
-                    <li><a href="/profile/personal-data">Datos personales</a></li>
-                    <li><a href="/profile/password">Contraseña</a></li>
-                    <li><a href="">Cerrar sesion</a></li>
-                </ul>
             </div>
-
-            <div id="right">
-                <div id="password">
-                    <label for="actualPassword">Contraseña actual</label>
-                    <input type="text" id="actualPassword" placeholder="Ingresa tu contraseña">
-                    <label for="actualPassword">Contraseña nueva</label>
-                    <input type="text" id="actualPassword" placeholder="Ingresa una contraseña nueva">
-                    <label for="actualPassword">Confirma tu contraseña</label>
-                    <input type="text" id="actualPassword" placeholder="Confirma tu contraseña">
-                </div>
-                <button>Guardar cambios</button>
-             </div>
         </div>
+    </div>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     
 </body>
 </html>
