--- a/plumeti/public/stylesheets/home.css
+++ b/plumeti/public/stylesheets/home.css
@@ -1,36 +1,15 @@
-@import url('https://fonts.googleapis.com/css?family=Baloo+Paaji+2&display=swap');
-
-*{
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    font-size: 18px;
-    font-family: 'Baloo Paaji 2';
-    letter-spacing: 3px;
-    color:#404040;
+#carousel{
+    position: relative;
 }
-a:hover{
-    text-decoration: none;
-}
-.navbar-toggler{ border:none; }
-.form-control{ border: none; }
-.relleno{
-    height: 69px;
-    background-color: red;
-}
-#carousel{ position: relative; }
-#carousel .fa-chevron-right , .fa-chevron-left{
-
+#carousel .row{
     position: absolute;
-    top:38%;
-    color: white;
+    width: 100%;
+    height: 100%;
+    top: 40%;
+}
+#carousel .fa-chevron-right , .fa-chevron-left{
+    color: #f7f7f7;
     font-size: 2rem;
-}
-#carousel .fa-chevron-right{
-    right:5%;
-}
-#carousel .fa-chevron-left{
-    left:5%;
 }
 main h2 , section h4{
     font-size: 3rem;
@@ -39,4 +18,3 @@ section article.banner{
     background-image: url('/images/slider2.jpg');
     background-size: cover;
 }
-footer{ background-color: #E9DFCF; }
