--- a/plumeti/public/stylesheets/navbar.css
+++ b/plumeti/public/stylesheets/navbar.css
@@ -1,86 +1,57 @@
 /* TODO ESTILO CLASE O ID DEBE INICIAR CON LA ETIQUETA NAV */
 
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: content-box;
-    text-decoration: none;
+    box-sizing: border-box;
     list-style: none;
-    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    font-family: 'Baloo Paaji 2';
+    letter-spacing: 3px;
+    line-height: 2rem;
+    color:#404040;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 a{
+    color: #404040;
+}
+a:hover{
     text-decoration: none;
+    color: #0077cc;
 }
-.relleno{
-    width: 100%;
-    height: 70px;
-}
-nav{
-    z-index: 1000;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 70px;
-    background-color: white;
-    box-shadow: 0 0 10px #909090;
-}
-nav .navContainer{
-    display: flex;
-    margin: auto;
-    width: 90%;
-    height: 100%;
-}
-nav .navContainer img#logo{
-    height: 80%;
-    width: auto;
-    padding: 7px;
-}
-nav .navContainer #buscador{
-    margin: 20px 0 0 50px;
-    width: 35%;
-    height: 30px;
-    background: none;
+.navbar-toggler{ border:none; }
+nav .container .navbar-collapse .form-control{
+    border:none;
     outline: none;
-    border: none;
-    border-bottom: 1px solid #ccc;
-    padding-left: 10px;
-    color: #202020;
-    cursor: pointer;
-    color: #909090;
-}
-
-nav .navContainer #buscador:focus{
-    border-bottom: 1px solid white;
-}
-nav ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color: #ccc;
-}
-nav .navContainer ul {
-    list-style: none;
-    height: 100%;
-    width: 48%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-nav .navContainer ul li a{
-    color:#909090;
-    width: 50px;
-    margin: 10px;
-    padding: 10px;
+    width: 50%;
+    border-radius: 0;
+    _border-bottom: 1px solid #909090;
+    padding: 0;
     transition: .3s;
 }
-nav .navContainer a i.fa-shopping-cart{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 70px;
-    height: 70px;
-    background-color: #e9dfcf;
-    color:white;
-    font-size: 20px;
+nav .container .navbar-collapse .form-control:focus{
+    border: none;
+    padding: 0;
+    padding-left: 15px;
+    border-radius: 10px;
+    background-color: #f7f7f7;
 }
-nav .navContainer ul li a:hover{
-    color:#e9dfcf;
+.fa-shopping-cart{
+    color: #e9dfcf;
+}
+.relleno{
+    height: 69px;
+}
+ul{
+    padding: 0;
+    margin: 0;
+}
+
+
+input:focus, input.form-control:focus {
+
+    outline:none !important;
+    outline-width: 0 !important;
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
 }
