--- a/plumeti/views/products.ejs
+++ b/plumeti/views/products.ejs
@@ -56,48 +56,71 @@
             <div class="row">
                 <div class="col-3">
                     <div class="navBar">
-                        <ul class="text-center my-3">Ordenar por</li>
-                            <li class="text-center my-3"><a href=#>Categoria</a></li>
-                            <li class="text-center my-3"><a href=#>Tamaño</a></li>
+                        <div>
+                            <ul class="text-center">Ordenar por:
+                              <a href="#"><li class="text-center">Categoria</li></a>
+                              <a href="#"><li class="text-center">Tamaño</li></a>
+                            </ul>
+                          </div>
 
-                        </ul>
                     </div>
                 </div>
                 <div class="col-9">
-            
-
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-12 product mt-5">
-                            <a href="/detail"><img class="w-100" src="/images/slider1.jpg" alt=""></a>
-                            <h4 class="text-center my-2">Nombre del producto</h3>
-                            <p class="text-center">$300</span>
+                    <div id="firstRow"class="row">
+                        <div id="producto" class="producto col-lg-3 col-md-6 col-sm-12 mt-1 position-relative">
+                            <a href="/detail"><img class="w-100" src="/images/Boquitas pintadas mostrado.heic" alt=""></a>
+                            <h5 class="px-1 my-2 text-center">Boquitas Pintadas</h5>
+                            <p class="text-center px-3">$300</p>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 product mt-5">
-                            <a href="/detail"><img class="w-100" src="/images/slider1.jpg" alt=""></a>
-                            <h4 class="text-center my-2">Nombre del producto</h3>
-                            <p class="text-center">$300</span>
+                        
+                        <div id="producto" class="producto col-lg-3 col-md-6 col-sm-12 mt-1 position-relative">
+                            <a href="/detail"><img class="w-100" src="/images/afra azul mostrado.heic" alt=""></a>
+                            <h5 class="px-1 my-2 text-center">Africa Azul</h4>
+                            <p class="text-center px-3">$300</p>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 product mt-5">
-                            <a href="/detail"><img class="w-100" src="/images/slider1.jpg" alt=""></a>
-                            <h4 class="text-center my-2">Nombre del producto</h3>
-                            <p class="text-center">$300</span>
+                        
+                        <div id="producto" class="producto col-lg-3 col-md-6 col-sm-12 mt-1 position-relative">
+                            <a href="/detail"><img class="w-100" src="/images/jardin estrellado naranja mostrado.heic" alt=""></a>
+                            <h5 class="px-1 my-2 text-center">Jardin Naranja</h5>
+                            <p class="text-center px-3">$300</p>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 product mt-5">
-                            <a href="/detail"><img class="w-100" src="/images/slider1.jpg" alt=""></a>
-                            <h4 class="text-center my-2">Nombre del producto</h3>
-                            <p class="text-center">$300</span>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 product mt-5">
-                            <a href="/detail"><img class="w-100" src="/images/slider1.jpg" alt=""></a>
-                            <h4 class="text-center my-2">Nombre del producto</h3>
-                            <p class="text-center">$300</span>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 product mt-5">
-                            <a href="/detail"><img class="w-100" src="/images/slider1.jpg" alt=""></a>
-                            <h4 class="text-center my-2">Nombre del producto</h3>
-                            <p class="text-center">$300</span>
+        
+                        <div id="producto" class="producto col-lg-3 col-md-6 col-sm-12 mt-1 position-relative">
+                            <a href="/detail"><img class="w-100" src="/images/orquidea celeste mostrado.heic" alt=""></a>
+                            <h5 class="px-1 my-2 text-center">Orquídea Celeste</h5>
+                            <p class="text-center px-3">$300</p>
                         </div>
                     </div>
+                    <div id="secondRow" class="row">
+                        <div id="producto" class="producto col-lg-3 col-md-6 col-sm-12 mt-1 position-relative">
+                            <a href="/detail"><img class="w-100" src="/images/alegria amarilla mostrado.heic" alt=""></a>
+                            <h5 class="px-1 my-2 text-center">Alegría Amarilla</h5>
+                            <p class="text-center px-3">$300</p>
+                        </div>
+                        
+                        <div id="producto" class="producto col-lg-3 col-md-6 col-sm-12 mt-1 position-relative">
+                            <a href="/detail"><img class="w-100" src="/images/cala azul mostrado.heic" alt=""></a>
+                            <h5 class="px-1 my-2 text-center">Calandra Azul</h5>
+                            <p class="text-center px-3">$300</p>
+                        </div>
+                        
+                        <div id="producto" class="producto col-lg-3 col-md-6 col-sm-12 mt-1 position-relative">
+                            <a href="/detail"><img class="w-100" src="/images/afra fucsia mostrado.heic" alt=""></a>
+                            <h5 class="px-1 my-2 text-center">Africa Fucsia</h5>
+                            <p class="text-center px-3">$300</p>
+                        </div>
+        
+                        <div id="producto" class="producto col-lg-3 col-md-6 col-sm-12 mt-1 position-relative">
+                            <a href="/detail"><img class="w-100" src="/images/orquidea celeste mostrado.heic" alt=""></a>
+                            <h5 class="px-1 my-2 text-center">Orquídea Celeste</h5>
+                            <p class="text-center px-3">$300</p>
+                        </div>
+                    </div>
+                    
+                </div>
+            
+
+
                 </div>
             </div>
     </div>
