--- a/plumeti/public/stylesheets/cart.css
+++ b/plumeti/public/stylesheets/cart.css
@@ -19,13 +19,25 @@ a:hover{
     background-color: red;
 }
 
-#tabla{
+#tablaTotal{
+    border:1px solid #E9DFCF; 
+    text-align:center;
+    margin-top:10px;
+    font-size:0,5rem;
+    margin-bottom: 30px;}
+
+#tablaMiddle{
 border:1px solid #E9DFCF; 
 text-align:center;
-margin-top:30px;
-font-size:0,5rem;}
+font-size:0,5rem;
+margin-bottom: 30px;}
 
-
+#tablaFirst{
+    border:1px solid #E9DFCF; 
+    text-align:center;
+    margin-top:30px;
+    font-size:0,5rem;
+    margin-bottom: 30px;}
 
 #boton{
     background-color: #E9DFCF;
