--- a/plumeti/views/cart.ejs
+++ b/plumeti/views/cart.ejs
@@ -57,54 +57,57 @@
 	<div class="relleno"></div>
 	<div class="container">
 		<div class="row d-flex align-items-center">
-			<section id="tabla" class="col-12 d-flex align-items-center">
+			<section id="tablaFirst" class="col-12 d-flex align-items-center">
 				<img class="col-2" src="/images/boquitas pintadas mostrado.HEIC" alt="BOQUITAS PINTADAS">
 				<span class="col-3">BOQUITAS PINTADAS</span>
-				<span class="col-4">                                <div id="botonModificar" class="btn-group mr-2 .btn-group-*" role="group" aria-label="Second group">
-					<button id="boton" type="button" class="btn btn-secondary">-</button>
-					<button id="boton" type="button" class="btn btn-secondary">1</button>
-					<button id="boton" type="button" class="btn btn-secondary">+</button>
-				</div>
-			</span>
-			<span class="col-2">$300</span>
-			<span class="col-1"><a href="#" class="fas fa-trash-alt" id="icono" style="color:black;"></a></span>
+				<span class="col-4">
+					<div id="botonModificar" class="btn-group mr-2 .btn-group-*" role="group" aria-label="Second group">
+						<button id="boton" type="button" class="btn btn-secondary">-</button>
+						<button id="boton" type="button" class="btn btn-secondary">1</button>
+						<button id="boton" type="button" class="btn btn-secondary">+</button>
+					</div>
+				</span>
+				<span class="col-2">$300</span>
+				<span class="col-1"><a href="#" class="fas fa-trash-alt" id="icono" style="color:black;"></a></span>
 			</section>
 		</div>
 		<div class="row d-flex align-items-center">
-			<section id="tabla" class="col-12 d-flex align-items-center">
+			<section id="tablaMiddle" class="col-12 d-flex align-items-center">
 				<img class="col-2" src="/images/boquitas pintadas mostrado.HEIC" alt="BOQUITAS PINTADAS">
 				<span class="col-3">BOQUITAS PINTADAS</span>
-				<span class="col-4">                                <div id="botonModificar" class="btn-group mr-2 .btn-group-*" role="group" aria-label="Second group">
-					<button id="boton" type="button" class="btn btn-secondary">-</button>
-					<button id="boton" type="button" class="btn btn-secondary">1</button>
-					<button id="boton" type="button" class="btn btn-secondary">+</button>
-				</div>
-			</span>
-			<span class="col-2">$300</span>
-			<span class="col-1"><a href="#" class="fas fa-trash-alt" id="icono" style="color:black;"></a></span>
+				<span class="col-4">
+					<div id="botonModificar" class="btn-group mr-2 .btn-group-*" role="group" aria-label="Second group">
+						<button id="boton" type="button" class="btn btn-secondary">-</button>
+						<button id="boton" type="button" class="btn btn-secondary">1</button>
+						<button id="boton" type="button" class="btn btn-secondary">+</button>
+					</div>
+				</span>
+				<span class="col-2">$300</span>
+				<span class="col-1"><a href="#" class="fas fa-trash-alt" id="icono" style="color:black;"></a></span>
 			</section>
 		</div>
 		<div class="row d-flex align-items-center">
-			<section id="tabla" class="col-12 d-flex align-items-center">
+			<section id="tablaTotal" class="col-12 d-flex align-items-center">
 				<img class="col-2">
 				<span class="col-3"></span>
-				<span class="col-4"></span>
-			<span class="col-2">$300</span>
-			<span class="col-1"></span>
+				<span class="col-4">TOTAL</span>
+				<span class="col-2">$300</span>
+				<span class="col-1"></span>
 			</section>
 		</div>
-	
-	
-	
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-			crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-			crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-			crossorigin="anonymous"></script>
+	</div>
+
+    <%- include('partials/footer.ejs') %>
+
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
