--- a/plumeti/views/detail.ejs
+++ b/plumeti/views/detail.ejs
@@ -81,7 +81,7 @@
                                 <img class="d-block w-100" src="/images/Boquitas pintadas en packaging.heic"
                                     alt="Second slide">
                             </div>
-                            <div  class="carousel-item">
+                            <div class="carousel-item">
                                 <img class="d-block w-100" src="/images/Boquitas pintadas doblado.heic"
                                     alt="Third slide">
                             </div>
@@ -100,9 +100,9 @@
                 </div>
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12 product mt-5">
-                <div class="right" >
+                <div class="right">
                     <h2 class="text-center my-3">Pañuelo BOQUITAS PINTADAS</h2>
-                    <h2 class="text-center my-3">$720</h2>
+                    <h2 class="text-center my-3">$300</h2>
                     <p class="text-center my-3">Descripción:<br>
                         Pañuelo sublimado con estampa exclusiva Plumeti <br>
                         Composición: 100% poliester <br>
@@ -119,34 +119,32 @@
 
             </div>
             <div class="col-lg-3 col-md-5 col-sm-6 product mt-2">
-                <button id="boton" type="button" class="btn btn-dark"><a href="/cart" class="nav-link">Comprar ahora</a></button>
+                <button id="boton" type="button" class="btn btn-dark"><a href="/cart" class="nav-link">Comprar
+                        ahora</a></button>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-6 product mt-2">
-                <button id="boton" type="button" class="btn btn-dark"><a href="/cart" class="nav-link">Agregar al carrito</a></button>
+                <button id="boton" type="button" class="btn btn-dark"><a href="/cart" class="nav-link">Agregar al
+                        carrito</a></button>
             </div>
             <div class="col-lg-0 col-md-1 col-sm-0 product mt-2">
 
             </div>
         </div>
     </div>
-    </div>
-    </div>
-    <div>
-        <div class="container">
-            <div col="row">
-                <div class="comentarios">
-                    <h3>Comentarios</h3>
-                </div>
+    <div class="container">
+        <div col="row">
+            <div class="comentarios">
+                <h3>Comentarios</h3>
             </div>
         </div>
     </div>
     </div>
     <div class="container">
-        <div col="row">
-            <div class="textarea">
-                <textarea name="mensaje" id="mensaje" rows="5" placeholder="Dejanos tu comentario!"></textarea>
-            </div>
-        </div>
+        <form>
+            <div class="form-group">
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Dejanos tu comentario!"></textarea>
+              </div>
+        </form>
     </div>
 
     <div class="container">
@@ -163,36 +161,10 @@
             </div>
         </div>
     </div>
+
+    <%- include('partials/footer.ejs') %>
     </main>
     <!-- Hoja de estilo para el footer footer.css -->
-    <footer class="">
-        <div class="container">
-            
-            <div class="row d-flex justify-content-between">
-
-                <span class="py-5 col-lg-6 col-md-6 col-sm-12 text-center">© Plumeti 2020</span>
-
-
-                <span class="py-5 col-lg-6 col-md-6 col-sm-12 text-center">
-                    <a href="">
-                        <i class="ml-3 fab fa-facebook-f"></i>
-                    </a>
-                    <a href="">
-                        <i class="ml-3 fab fa-instagram"></i>
-                    </a>
-                    <a href="">
-                        <i class="ml-3 fab fa-whatsapp"></i>
-                    </a>
-                    <a href="">
-                        <i class="ml-3 fas fa-envelope"></i>
-                    </a>
-                </span>
-            </div>
-        </div>
-    </footer>
-
-
-
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
