--- a/plumeti/views/cart.ejs
+++ b/plumeti/views/cart.ejs
@@ -23,44 +23,13 @@
 </head>
 
 <body>
-
-	<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top w-100 m-0 shadow">
-		<div class="container">
-			<div class="navbar-brand">
-				<img src="/images/logo.svg" height="40px" alt="">
-			</div>
-
-			<i class="fas fa-bars navbar-toggler" data-target="#menu" data-toggle="collapse" type="button"></i>
-
-			<div class="collapse navbar-collapse" id="menu">
-
-				<input class="form-control " type="text" placeholder="Search" aria-label="Search">
-
-
-				<ul class="navbar-nav ml-auto">
-					<li class="navbar-item mx-1">
-						<a href="/home" class="nav-link">Inicio</a>
-					</li>
-					<li class="navbar-item mx-1">
-						<a href="/profile" class="nav-link">Perfil</a>
-					</li>
-					<li class="navbar-item mx-1">
-						<a href="/products" class="nav-link">Productos</a>
-					</li>
-					<li class="navbar-item mx-1">
-						<a href="/cart" class="nav-link"><i class="fas fa-shopping-cart"></i></a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<div class="relleno"></div>
+    <%- include('partials/navbar.ejs') %>
 	<div class="container">
 		<div class="row d-flex align-items-center">
 			<section id="tablaFirst" class="col-12 d-flex align-items-center">
 				<img class="col-2" src="/images/boquitas pintadas mostrado.HEIC" alt="BOQUITAS PINTADAS">
-				<span class="col-3">BOQUITAS PINTADAS</span>
-				<span class="col-4">
+				<span class="col-3 ">BOQUITAS PINTADAS</span>
+				<span class="col-4 ">
 					<div id="botonModificar" class="btn-group mr-2 .btn-group-*" role="group" aria-label="Second group">
 						<button id="boton" type="button" class="btn btn-secondary">-</button>
 						<button id="boton" type="button" class="btn btn-secondary">1</button>
@@ -73,7 +42,7 @@
 		</div>
 		<div class="row d-flex align-items-center">
 			<section id="tablaMiddle" class="col-12 d-flex align-items-center">
-				<img class="col-2" src="/images/boquitas pintadas mostrado.HEIC" alt="BOQUITAS PINTADAS">
+				<img class="col-2 col-xs-1" src="/images/boquitas pintadas mostrado.HEIC" alt="BOQUITAS PINTADAS">
 				<span class="col-3">BOQUITAS PINTADAS</span>
 				<span class="col-4">
 					<div id="botonModificar" class="btn-group mr-2 .btn-group-*" role="group" aria-label="Second group">
