--- a/plumeti/views/detail.ejs
+++ b/plumeti/views/detail.ejs
@@ -28,38 +28,7 @@
 
 
     <!-- Hoja de estilo para el nav navbar.css -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top w-100 m-0 shadow">
-        <div class="container">
-            <div class="navbar-brand">
-                <img src="/images/logo.svg" height="40px" alt="">
-            </div>
-
-            <i class="fas fa-bars navbar-toggler" data-target="#menu" data-toggle="collapse" type="button"></i>
-
-            <div class="collapse navbar-collapse" id="menu">
-
-                <input class="form-control " type="text" placeholder="Search" aria-label="Search">
-
-
-                <ul class="navbar-nav ml-auto">
-                    <li class="navbar-item mx-1">
-                        <a href="/home" class="nav-link">Inicio</a>
-                    </li>
-                    <li class="navbar-item mx-1">
-                        <a href="/profile" class="nav-link">Perfil</a>
-                    </li>
-                    <li class="navbar-item mx-1">
-                        <a href="/products" class="nav-link">Productos</a>
-                    </li>
-                    <li class="navbar-item mx-1">
-                        <a href="/cart" class="nav-link"><i class="fas fa-shopping-cart"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="relleno"></div>
+    <%- include('partials/navbar.ejs') %>
 
     <!-- Hasta aca llega el menu de navegacion -->
     <div class="container">
