--- a/plumeti/views/products.ejs
+++ b/plumeti/views/products.ejs
@@ -19,37 +19,8 @@
 
 <body>
     <!-- Hoja de estilo para el nav navbar.css -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top w-100 m-0 shadow">
-        <div class="container">
-            <div class="navbar-brand">
-                <img src="/images/logo.svg" height="40px" alt="">
-            </div>
+    <%- include('partials/navbar.ejs') %>
 
-            <i class="fas fa-bars navbar-toggler" data-target="#menu" data-toggle="collapse" type="button"></i>
-                
-            <div class="collapse navbar-collapse" id="menu">
-
-                <input class="form-control " type="text" placeholder="Search" aria-label="Search">
-
-
-                <ul class="navbar-nav ml-auto">
-                    <li class="navbar-item mx-1">
-                        <a href="/home" class="nav-link">Inicio</a>
-                    </li>
-                    <li class="navbar-item mx-1">
-                        <a href="/profile" class="nav-link">Perfil</a>
-                    </li>
-                    <li class="navbar-item mx-1">
-                        <a href="/products" class="nav-link">Productos</a>
-                    </li>
-                    <li class="navbar-item mx-1">
-                        <a href="/cart" class="nav-link"><i class="fas fa-shopping-cart"></i></a>
-                    </li>
-                </ul>                
-            </div>
-        </div>
-    </nav>
-<div class="relleno"></div>
     <!-- Hasta aca llega el menu de navegacion -->
     <!-- Aca comienzan los productos-->
     <div class="container">
@@ -124,31 +95,7 @@
                 </div>
             </div>
     </div>
-    <footer class="">
-        <div class="container">
-            
-            <div class="row d-flex justify-content-between">
-
-                <span class="py-5 col-lg-6 col-md-6 col-sm-12 text-center">© Plumeti 2020</span>
-
-
-                <span class="py-5 col-lg-6 col-md-6 col-sm-12 text-center">
-                    <a href="">
-                        <i class="ml-3 fab fa-facebook-f"></i>
-                    </a>
-                    <a href="">
-                        <i class="ml-3 fab fa-instagram"></i>
-                    </a>
-                    <a href="">
-                        <i class="ml-3 fab fa-whatsapp"></i>
-                    </a>
-                    <a href="">
-                        <i class="ml-3 fas fa-envelope"></i>
-                    </a>
-                </span>
-            </div>
-        </div>
-    </footer>
+    <%- include('partials/footer.ejs') %>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
